--- a/src/app/shared/components/generic-form/generic-form.component.html
+++ b/src/app/shared/components/generic-form/generic-form.component.html
@@ -34,7 +34,7 @@
 <!-- bind a local variable `row` to avoid ?. warnings -->
 <div class="generic-form-container" *ngIf="selectedRow as row">
   <div class="form-grid">
-    <div *ngFor="let column of columns">
+    <div *ngFor="let column of columns"   [class.full-row]="column.fullRow || column.dataType === 'longtext'">
       <!-- Label -->
       <div class="header-label-line align-start">
         <label class="form-label">{{ column.labelKey | translate }}</label>
@@ -174,6 +174,16 @@
 
 
             </div>
+
+            <textarea *ngSwitchCase="'longtext'"
+                      class="custom-textarea"
+                      [attr.name]="column.field"
+                      [(ngModel)]="row[column.field]"
+                      (ngModelChange)="onFieldChanged(column, $event)"
+                      [rows]="column.rows || 4"
+                      [attr.maxLength]="column.maxLength || 4000"
+                      [class.input-error]="isInvalid(column)">
+            </textarea>
 
     
             <!-- DEFAULT (STRING/NUMBER/ETC) -->
