--- a/src/app/Features/home/components/classes-timeline-by-teacher/classes-timeline-by-teacher.component.html
+++ b/src/app/Features/home/components/classes-timeline-by-teacher/classes-timeline-by-teacher.component.html
@@ -1,6 +1,6 @@
 <app-custom-accordion title="Class.DailyClass">
   <div class="timeline-container">
-  <div class="schedule" dir="rtl">
+  <div class="schedule">
     <!-- header -->
     <div class="header sticky">
       <div class="left-cell"></div>
