--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -4661,19 +4661,20 @@ hr {
 }
 
 .login-form {
-    position: absolute;
-    top: 50%;
-    left: 20%;
-    width: 420px;
-    padding: 50px 45px 30px 45px;
-    transform: translate(-50%, -50%);
-    background: rgba(0, 0, 0, 0.4);
-    box-shadow: 0 15px 20px rgba(0, 0, 0, 0.2);
-    border-radius: 5px
+        width: 80vw;
+        max-width: 400px;
+        background: rgba(0, 0, 0, 0.65);
+        -webkit-backdrop-filter: blur(6px);
+        backdrop-filter: blur(6px);
+        border-radius: 18px;
+        padding: 30px 26px;
+        margin: -96px auto 22px;
+        box-shadow: 25px 0 40px 5px rgba(0, 0, 0, 0.85), 0 0 40px rgba(0, 0, 0, 0.6), 0 15px 45px rgba(0, 0, 0, 0.7);
 }
 
 @media (max-width: 575px) {
     .login-form {
+        margin: auto;
         width: 282px;
         padding: 90px 15px 15px 15px
     }
@@ -4682,11 +4683,11 @@ hr {
 .login-form .logo-login img {
     width: 80px;
     height: 80px;
-    position: absolute;
-    top: -57px;
+    background-color:rgba(0, 0, 0, 0.545) ;
+    display: block;
     left: 0;
     right: 0;
-    margin: 0 auto;
+    margin: -66px auto 22px;
     border: 5px solid rgba(255, 255, 255, 0.1);
     box-shadow: 0 15px 20px rgba(0, 0, 0, 0.7);
     border-radius: 50%
@@ -4705,6 +4706,7 @@ hr {
     position: relative;
     margin: 20px 0 ;
     text-align: start;
+    border-radius: 20%;
 
 }
 
@@ -4727,7 +4729,8 @@ hr {
     font-size: 18px;
     border: none;
     color: #fff;
-    border-bottom: 1px solid #fff
+    border-radius: 5px;
+    /* border-bottom: 1px solid #fff */
 }
 
 .login-form .form-input input::placeholder {
