--- a/src/app/Features/organization/components/organization-details/organization-details.component.html
+++ b/src/app/Features/organization/components/organization-details/organization-details.component.html
@@ -21,6 +21,9 @@
                 [buttonVisibility]="ButtonVisibility"
                 (rowSaved)="onOrganizationSaved($event)">
           </app-generic-form>
+          <app-image-manager
+          [organization]="organization">
+          </app-image-manager>
         </app-custom-accordion> 
      </div>
   </ng-container>
