--- a/src/app/Features/home/components/slider/slider.component.html
+++ b/src/app/Features/home/components/slider/slider.component.html
@@ -1,6 +1,6 @@
 <section class="slider-area">
     <div >
-    <ng-container *ngIf="organization$ | async as organization">
+    <ng-container *ngIf="org$ | async as organization">
 
         <!-- Single Slider -->
         <div class="single-slider slider-height d-flex align-items-center">
