--- a/src/app/Features/organization/components/organization-details/organization-details.component.html
+++ b/src/app/Features/organization/components/organization-details/organization-details.component.html
@@ -6,7 +6,7 @@
     </div>
   </section>
 
-  <ng-container *ngIf="organization$ | async as organization">
+  <ng-container *ngIf="org$ | async as organization">
 
 
     <div class="accordion-container">
