--- a/src/app/Features/pre-login/components/pre-login-header/pre-login-header.component.html
+++ b/src/app/Features/pre-login/components/pre-login-header/pre-login-header.component.html
@@ -7,9 +7,7 @@
 
             <!-- Logo + Title (يمين) -->
             <div class="app-header">
-              <a href="index.html">
-                <img src="assets/img/logo/logo.png" alt="" class="app-logo">
-              </a>
+              <app-logo className="app-logo"></app-logo>
               <h1 class="app-title">{{ 'app-name' | translate }}</h1>
             </div>
 
