--- a/src/app/Features/courses/components/courses-page.component.html
+++ b/src/app/Features/courses/components/courses-page.component.html
@@ -78,7 +78,7 @@
       <mat-tab-group mat-stretch-tabs="false">
           <mat-tab label='{{"Class.ClassDetails" | translate}}' >
                  <app-generic-form
-                    [columns]="classColumns"
+                    [columns]="classFormCloumns"
                     [selectedRow]="selectedClass"
                     [alwaysEditable]="true"
                     [primaryKey]="'classPk'"
