--- a/src/app/Features/reports/components/reports-form/reports-form.component.html
+++ b/src/app/Features/reports/components/reports-form/reports-form.component.html
@@ -23,6 +23,7 @@
               <option value="payments">{{ 'Reports.Types.Payments' | translate }}</option>
               <option value="teacherCourses">{{ 'Reports.Types.TeacherCourses' | translate }}</option>
               <option value="transportationCosts">{{ 'Reports.Types.TransportationCosts' | translate }}</option>
+              <option value="classes">{{ 'Reports.Types.Classes' | translate }}</option>
             </select>
           </div>
 
