--- a/src/app/shared/components/search-dialog/search-dialog.component.html
+++ b/src/app/shared/components/search-dialog/search-dialog.component.html
@@ -12,10 +12,10 @@
 
 
         <div class="form-buttons">
-            <app-button
+            <!-- <app-button
                 [label]="'label.find'"
                 [onClick]="search">
-            </app-button>
+            </app-button> -->
             <app-button
                 [label]="'label.reset'"
                 [onClick]="reset">
