--- a/src/app/Features/home/components/class-details-form/class-details-form.component.html
+++ b/src/app/Features/home/components/class-details-form/class-details-form.component.html
@@ -5,50 +5,50 @@
 </ng-container>
 
 <ng-template #content>
- <div class="dialog-header">
-  <h3 class="title">{{ 'Class.ClassDetails' | translate }}</h3>
+  <div class="dialog-header">
+    <h3 class="title">{{ 'Class.ClassDetails' | translate }}</h3>
 
-  <button mat-icon-button
-          class="close-btn"
-          (click)="dialogRef.close()"
-          aria-label="Close">
-    <mat-icon>close</mat-icon>
-  </button>
-</div>
+    <button mat-icon-button class="close-btn" (click)="dialogRef.close()" aria-label="Close">
+      <mat-icon>close</mat-icon>
+    </button>
+  </div>
 
   <div *ngIf="error" class="error">{{ error }}</div>
 
+  <!-- ✅ ده اللي بيدّي سكرول تلقائي -->
+  <mat-dialog-content class="dialog-content">
+    <!-- حاوية فيها أقصى ارتفاع + overflow -->
+    <div class="dialog-scroll">
+      <mat-tab-group [dynamicHeight]="true">
+        <mat-tab label='{{"Class.ClassDetails" | translate}}'>
+          <app-generic-form
+            *ngIf="selectedClass"
+            [columns]="classFormCloumns"
+            [selectedRow]="selectedClass"
+            [alwaysEditable]="true"
+            [primaryKey]="'classPk'"
+            [apiPath]="'classes'"
+            (rowSaved)="onRowSaved($event)"
+            (rowChanged)="onClassRowChanged($event)"
+            (rowDeleted)="onRowDeleted($event)"
+            [buttonVisibility]="bottomVisability">
+          </app-generic-form>
+        </mat-tab>
 
-       <mat-tab-group mat-stretch-tabs="false">
-          <mat-tab label='{{"Class.ClassDetails" | translate}}' >
-                   <app-generic-form
-                        *ngIf="selectedClass"
-                        [columns]="classFormCloumns"
-                        [selectedRow]="selectedClass"
-                        [alwaysEditable]="true"
-                        [primaryKey]="'classPk'"
-                        [apiPath]="'classes'"
-                        (rowSaved)="onRowSaved($event)"
-                        (rowChanged)="onClassRowChanged($event)"
-                        (rowDeleted)="onRowDeleted($event)"
-                        [buttonVisibility]="bottomVisability">
-                    </app-generic-form>
-          </mat-tab>
-          <mat-tab label='{{"StudentAttendance.Attendance" | translate}}'  *ngIf="selectedClass?.classPk">
-                <app-generic-table
-                  #classStudentAttendanceTable
-                  [screenId]="'studentAttendance'"
-                  [primaryKey]="'studentAttendanceClassPk'"
-                  [columns]="studentAttendanceColumns"
-                  [dataFactory]="StudentAttendanceDataFactory"
-                  [apiPath]="'studentAttendanceClasses'"
-                  [searchParameterKey]="'classFk'"
-                  [selectedId]="selectedClass?.classPk"
-                  [isEditableTable]="true">
-                </app-generic-table>
-          </mat-tab>
-        </mat-tab-group>
-
-
-
+        <mat-tab label='{{"StudentAttendance.Attendance" | translate}}' *ngIf="selectedClass?.classPk">
+          <app-generic-table
+            #classStudentAttendanceTable
+            [screenId]="'studentAttendance'"
+            [primaryKey]="'studentAttendanceClassPk'"
+            [columns]="studentAttendanceColumns"
+            [dataFactory]="StudentAttendanceDataFactory"
+            [apiPath]="'studentAttendanceClasses'"
+            [searchParameterKey]="'classFk'"
+            [selectedId]="selectedClass?.classPk"
+            [isEditableTable]="true">
+          </app-generic-table>
+        </mat-tab>
+      </mat-tab-group>
+    </div>
+  </mat-dialog-content>
 </ng-template>
